# Rampage

./: .$dev.drawio.bkp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ROD.drawio  ROD.txt  compileSchemas.bat  dev.drawio  licenseReminder.txt  notes.txt  prepareBin.bat
src/: CMakeLists.txt  app.hpp  assetLoader.cpp  assetLoader.hpp  contexts.hpp  eventManager.hpp  guiRender.hpp  health.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  main.cpp  physics.hpp  player.hpp  scene.hpp  seekPlayer.hpp  spriteRender.hpp  tile.hpp  tilePrefabs.cpp  tilePrefabs.hpp  tilemap.hpp  tilemapRender.hpp  transform.hpp  turret.hpp
src/common/: CMakeLists.txt  common.hpp  commondef.hpp  empty.cpp  hashes.hpp  host.hpp  ihost.hpp  imodule.hpp  math.hpp  module.cpp  module.hpp  noise.hpp  pipeline.cpp  pipeline.hpp
src/common/box2d/: LockLessMultiReadPipe.hpp  TaskScheduler.cpp  TaskScheduler.hpp  box2dScheduler.hpp
src/common/ecs/: componentSet.cpp  componentSet.hpp  ecs.hpp  entity.cpp  entity.hpp  entityPtr.hpp  gameWorld.cpp  gameWorld.hpp  iassetLoader.hpp  id.hpp  ipool.hpp  iworld.cpp  iworld.hpp  module.hpp  pool.hpp  ref.cpp  ref.hpp  serializableWorld.cpp  serializableWorld.hpp  serializer.cpp  serializer.hpp  serter.cpp  serter.hpp  staticId.hpp  system.hpp  taggedWorld.cpp  taggedWorld.hpp  world.cpp  world.hpp
src/common/ecs/dep/: assetLoader.hpp
src/common/schema/: jsonSchema.hpp  rampage.capnp  rampage.capnp.c++  rampage.capnp.h  schema.json
src/common/serialization/: README.hpp  examples.hpp  idRemapper.hpp  saveCoordinator.cpp  saveCoordinator.hpp  saveData.hpp
src/components/: arrow.hpp  body.hpp  collisionQueue.hpp  health.hpp  item.hpp  player.hpp  shapes.hpp  spawner.hpp  sprite.hpp  tile.hpp  tilemap.hpp  transform.hpp  turret.hpp  worldMap.hpp
src/core/: CMakeLists.txt  contexts.hpp  entry.cpp  module.cpp  module.hpp  transform.cpp  transform.hpp
src/ecs/: componentSet.cpp  componentSet.hpp  ecs.hpp  entity.cpp  entity.hpp  id.hpp  module.hpp  pool.hpp  ref.cpp  ref.hpp  serter.cpp  serter.hpp  system.hpp  world.cpp  world.hpp
src/event/: CMakeLists.txt  keys.hpp  module.cpp  module.hpp  test.hpp
src/game/: CMakeLists.txt  assetLoader.cpp  assetLoader.hpp  inventory.cpp  inventory.hpp  module.cpp  module.hpp  scene.hpp
src/game/components/: arrow.cpp  arrow.hpp  body.cpp  body.hpp  chunkedTilemap.cpp  chunkedTilemap.hpp  collisionEvent.hpp  collisionQueue.hpp  components.hpp  health.cpp  health.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  items.cpp  items.hpp  ownedBy.cpp  ownedBy.hpp  player.cpp  player.hpp  shapes.cpp  shapes.hpp  spawner.cpp  spawner.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp  turret.cpp  turret.hpp  worldMap.hpp
src/game/states/: lostState.hpp  menuState.hpp  playState.hpp  state.hpp
src/game/systems/: gui.cpp  gui.hpp  guiRender.cpp  guiRender.hpp  health.cpp  health.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  pathfinding.cpp  pathfinding.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  shapeRender.cpp  shapeRender.hpp  spawner.cpp  spawner.hpp  spriteRender.cpp  spriteRender.hpp  tilemap.cpp  tilemap.hpp  turret.cpp  turret.hpp
src/gui/: CMakeLists.txt  module.cpp  module.hpp
src/gui/gui/: common.hpp  gui.hpp
src/host/: CMakeLists.txt  host.cpp  host.hpp  main.cpp
src/log/: CMakeLists.txt  entry.cpp  log.cpp  log.hpp  module.cpp  module.hpp
src/modules/: guiRender.hpp  health.hpp  item.hpp  pathfinding.hpp  physics.hpp  player.hpp  shapeRender.hpp  spawner.hpp  spriteRender.hpp  tilemap.hpp  turret.hpp
src/render/: CMakeLists.txt  baseRender.hpp  camera.cpp  camera.hpp  mesh.hpp  module.cpp  module.hpp  opengl.hpp  render.hpp  sampler.hpp  shader.hpp  shapes.hpp  stb_image.h  textureArray.hpp  util.hpp  vertexArrayBuffer.hpp  vertexBuffer.hpp
src/render/opengl/: mesh.hpp  sampler.hpp  shader.hpp  textureArray.hpp  util.cpp  util.hpp  vertexArrayBuffer.hpp  vertexBuffer.hpp
src/render/render2D/: archive.txt  commands.hpp  common.hpp  internal.cpp  internal.hpp  render2D.cpp  render2D.hpp
src/render/render2D/internal/: context.cpp  context.hpp  graphicsPipelineBuilder.cpp  graphicsPipelineBuilder.hpp  internal.cpp  internal.hpp  render.hpp  shapeRender.cpp  shapeRender.hpp  tileRender.cpp  tileRender.hpp  vkcommon.hpp
src/states/: menuState.hpp  playState.hpp  state.hpp
src/temp/: CMakeLists.txt  app.hpp  assetLoader.cpp  assetLoader.hpp  contexts.hpp  inventory.hpp  main.cpp  scene.hpp
src/temp/components/: arrow.hpp  shapes.hpp  sprite.hpp  tilemap.hpp  transform.hpp  worldMap.hpp
src/temp/ecs/: entity.hpp  module.hpp  serter.cpp  system.hpp  world.hpp
src/temp/modules/: guiRender.hpp  health.hpp  item.hpp  pathfinding.hpp  player.hpp  spriteRender.hpp  turret.hpp
src/temp/render/: sampler.hpp  shader.hpp  stb_image.h  textureArray.hpp
src/temp/schema/: rampage.capnp
src/temp/states/: playState.hpp  state.hpp
src/temp/tmp/: TaskScheduler.cpp  TaskScheduler.hpp  box2dScheduler.hpp
src/temp/utility/: LockLessMultiReadPipe.hpp  base.hpp  box2dScheduler.hpp  id.hpp  log.hpp
src/utility/: TaskScheduler.cpp  base.hpp  box2dScheduler.hpp  ecs.cpp  ecs.hpp  hashes.hpp  id.hpp  log.cpp  log.hpp  math.hpp
tools/: CMakeLists.txt
tools/rampson/: CMakeLists.txt
tools/rampson/src/: CMakeLists.txt
tools/rampson/src/common/: CMakeLists.txt  commondef.hpp  schema.cpp  schema.hpp  schemaCompiler.cpp  schemaCompiler.hpp  schemaParser.cpp  schemaParser.hpp
tools/rampson/src/common/include/: rampson.hpp  rampsonTypes.hpp
tools/rampson/src/compiler/: CMakeLists.txt  compiler.hpp  main.cpp
tools/rampson/src/compiler/test/: gameAssets.json
